--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <body>
             <div class="header-top">Поиск скидок в России</div>
             <div class="header"></div>
-        <div id="date">30 Июля 2024
+        <div id="date">31 Июля 2024
         </div>
         <div id="sort">
         </div>
@@ -9519,7 +9519,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/378016?erid=2SDnjdVFUyP" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО «КОЛЕСА ДАРОМ.РУ» ИНН 1651066469, https://www.kolesa-darom.ru. erid 2SDnjdVFUyP</div>
-                </div><div id="number560 " class="gs_kupon" >
+                </div><div id="number560 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Выигрывайте комплект летних шин Pirelli!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/92828/logos/regular.png" /></div>
                 <div class="gs_website">kolesa-darom.ru</div>
@@ -13735,7 +13735,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/380408?erid=2SDnjeQWBxE" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО ГикБреинс ИНН 7726381870, https://gb.ru/. erid 2SDnjeQWBxE</div>
-                </div><div id="number808 " class="gs_kupon" >
+                </div><div id="number808 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Скидка 300 рублей на первую покупку</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/109244/logos/regular.png" /></div>
                 <div class="gs_website">kubaninstrument.ru</div>
@@ -13752,7 +13752,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/380421?kc=PROMO24&erid=2SDnjdsXBZC" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ИП Осипян Виктор Навасартович ИНН 230801417961, https://www.kubaninstrument.ru/. erid 2SDnjdsXBZC</div>
-                </div><div id="number809 " class="gs_kupon" >
+                </div><div id="number809 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Выиграй автомобиль с "Кубань Инструмент"</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/109244/logos/regular.png" /></div>
                 <div class="gs_website">kubaninstrument.ru</div>
@@ -13769,7 +13769,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/380422?erid=2SDnjc5kPJz" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ИП Осипян Виктор Навасартович ИНН 230801417961, https://www.kubaninstrument.ru/. erid 2SDnjc5kPJz</div>
-                </div><div id="number810 " class="gs_kupon" >
+                </div><div id="number810 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Летняя распродажа до -80%</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/109244/logos/regular.png" /></div>
                 <div class="gs_website">kubaninstrument.ru</div>
@@ -13786,7 +13786,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/380423?erid=2SDnjchL65G" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ИП Осипян Виктор Навасартович ИНН 230801417961, https://www.kubaninstrument.ru/. erid 2SDnjchL65G</div>
-                </div><div id="number811 " class="gs_kupon" >
+                </div><div id="number811 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Рулетка в подарок от Hanskonner!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/109244/logos/regular.png" /></div>
                 <div class="gs_website">kubaninstrument.ru</div>
@@ -13803,7 +13803,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/380424?erid=2SDnjdCyqiA" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ИП Осипян Виктор Навасартович ИНН 230801417961, https://www.kubaninstrument.ru/. erid 2SDnjdCyqiA</div>
-                </div><div id="number812 " class="gs_kupon" >
+                </div><div id="number812 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Супер цены на мексиканский бренд Truper!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/109244/logos/regular.png" /></div>
                 <div class="gs_website">kubaninstrument.ru</div>
@@ -14415,7 +14415,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/380663?erid=2SDnjdytzqg" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ПК «Белль Ю» ИНН 6678115874, https://belleyou.ru/. erid 2SDnjdytzqg</div>
-                </div><div id="number848 " class="gs_kupon" >
+                </div><div id="number848 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Скидка -10% на заказ для новых клиентов</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/108864/logos/regular.png" /></div>
                 <div class="gs_website">zdravcity.ru</div>
@@ -25397,7 +25397,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/382287?erid=2SDnjbq4bC6" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО Томас Мюнц Рус ИНН 2632811590, https://thomas-muenz.ru. erid 2SDnjbq4bC6</div>
-                </div><div id="number1494 " class="gs_kupon" >
+                </div><div id="number1494 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Аксессуарный базар до -70%</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/102374/logos/regular.png" /></div>
                 <div class="gs_website">salamander.ru</div>
@@ -25414,7 +25414,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/382291?erid=2SDnjcxJiZ8" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО Томас Мюнц Рус ИНН 2632811590, https://www.salamander.ru. erid 2SDnjcxJiZ8</div>
-                </div><div id="number1495 " class="gs_kupon" >
+                </div><div id="number1495 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Моделей больше, скидки выше!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/102374/logos/regular.png" /></div>
                 <div class="gs_website">salamander.ru</div>
@@ -25924,7 +25924,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/382331?erid=2SDnjcZspWe" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО Трейд Менеджмент ИНН 7719433140, https://lgcity.ru/. erid 2SDnjcZspWe</div>
-                </div><div id="number1525 " class="gs_kupon" >
+                </div><div id="number1525 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Скидка -20% на книги Николая Носова</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/91759/logos/regular.png" /></div>
                 <div class="gs_website">respublica.ru</div>
@@ -27488,7 +27488,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/382505?kc=%D0%A1%D0%92%D0%95%D0%96%D0%95%D0%A1%D0%A2%D0%AC&erid=2SDnjeVLM2a" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "АДВ-КЕЙК" ИНН 9705066208, https://biblioteka.shop/. erid 2SDnjeVLM2a</div>
-                </div><div id="number1617 " class="gs_kupon" >
+                </div><div id="number1617 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Скидка -50% на ассортимент IKEA</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/95624/logos/regular.png" /></div>
                 <div class="gs_website">market.yandex.ru</div>
@@ -31177,7 +31177,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/383095?erid=2SDnjdLjy4v" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "ФРАНЧЕСКО ДОННИ" ИНН 5029224041, https://francesco.ru/. erid 2SDnjdLjy4v</div>
-                </div><div id="number1834 " class="gs_kupon" >
+                </div><div id="number1834 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Скидка 300 рублей на первый заказ от 5 000 рублей</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/109244/logos/regular.png" /></div>
                 <div class="gs_website">kubaninstrument.ru</div>
@@ -32843,7 +32843,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/383266?kc=GdeSlon&erid=2SDnjdqwBp6" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ИП Доронина Ольга Андреевна ИНН 667479374359, https://sektaschool.ru/. erid 2SDnjdqwBp6</div>
-                </div><div id="number1932 " class="gs_kupon" >
+                </div><div id="number1932 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Скидки от 50% в Lazurit</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/102708/logos/regular.png" /></div>
                 <div class="gs_website">lazurit.com</div>
@@ -32860,7 +32860,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/383268?erid=2SDnjdifeSe" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО ТД"ЛАЗУРИТ" ИНН 3917032714, https://lazurit.com. erid 2SDnjdifeSe</div>
-                </div><div id="number1933 " class="gs_kupon" >
+                </div><div id="number1933 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Дополнительная скидка +32% на заказ</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/102708/logos/regular.png" /></div>
                 <div class="gs_website">lazurit.com</div>
