--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <body>
             <div class="header-top">Поиск скидок в России</div>
             <div class="header"></div>
-        <div id="date">3 Августа 2024
+        <div id="date">4 Августа 2024
         </div>
         <div id="sort">
         </div>
@@ -19481,4 +19481,72 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/383957?kc=BOOM20&erid=2SDnjecfGfC" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "Элит Групп" ИНН 5029152090, https://santehnika-tut.ru/. erid 2SDnjecfGfC</div>
+                </div><div id="number1146 " class="gs_kupon" >
+            <div class="gs_descr"><h2>Скидка -23% на маньхуа</h2></div>
+                <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/90629/logos/regular.png" /></div>
+                <div class="gs_website">bookvoed.ru</div>
+                <div class="gs_category">Книги</div>
+                <div class="gs_dates">
+                <b>
+                <div class="gs_start">4 Августа 2024 00:00:00</div><br>
+                <div class="gs_end">8 Августа 2024 23:59:59</div>
+                </b>
+                </div>
+                <div class="gs_type">SALE</div>
+                <div class="gs_block">
+                <div class="gs_code">Промокод: </div>
+                <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/383980?erid=2SDnjdBx6tA" >Получить скидку</a></div>
+                </div>
+                <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "НОВЫЙ КНИЖНЫЙ ЦЕНТР" ИНН 7710422909, https://www.bookvoed.ru. erid 2SDnjdBx6tA</div>
+                </div><div id="number1147 " class="gs_kupon" >
+            <div class="gs_descr"><h2>Скидка -23% на книги по саморазвитию и тайм-менеджменту</h2></div>
+                <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/90629/logos/regular.png" /></div>
+                <div class="gs_website">bookvoed.ru</div>
+                <div class="gs_category">Книги</div>
+                <div class="gs_dates">
+                <b>
+                <div class="gs_start">4 Августа 2024 00:00:00</div><br>
+                <div class="gs_end">8 Августа 2024 23:59:59</div>
+                </b>
+                </div>
+                <div class="gs_type">SALE</div>
+                <div class="gs_block">
+                <div class="gs_code">Промокод: </div>
+                <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/383981?erid=2SDnjdHt41Y" >Получить скидку</a></div>
+                </div>
+                <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "НОВЫЙ КНИЖНЫЙ ЦЕНТР" ИНН 7710422909, https://www.bookvoed.ru. erid 2SDnjdHt41Y</div>
+                </div><div id="number1148 " class="gs_kupon" >
+            <div class="gs_descr"><h2>Скидка -23% на подборку комиксов</h2></div>
+                <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/80969/logos/regular.png" /></div>
+                <div class="gs_website">chitai-gorod.ru</div>
+                <div class="gs_category">Книги</div>
+                <div class="gs_dates">
+                <b>
+                <div class="gs_start">4 Августа 2024 00:00:00</div><br>
+                <div class="gs_end">8 Августа 2024 23:59:59</div>
+                </b>
+                </div>
+                <div class="gs_type">SALE</div>
+                <div class="gs_block">
+                <div class="gs_code">Промокод: </div>
+                <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/383997?erid=2SDnjcJ5swp" >Получить скидку</a></div>
+                </div>
+                <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "НОВЫЙ КНИЖНЫЙ ЦЕНТР" ИНН 7710422909, https://www.chitai-gorod.ru/. erid 2SDnjcJ5swp</div>
+                </div><div id="number1149 " class="gs_kupon" >
+            <div class="gs_descr"><h2>Скидка -23% на подборку книг о привычках, тайм-менеджменте и эффективности</h2></div>
+                <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/80969/logos/regular.png" /></div>
+                <div class="gs_website">chitai-gorod.ru</div>
+                <div class="gs_category">Книги</div>
+                <div class="gs_dates">
+                <b>
+                <div class="gs_start">4 Августа 2024 00:00:00</div><br>
+                <div class="gs_end">8 Августа 2024 23:59:59</div>
+                </b>
+                </div>
+                <div class="gs_type">SALE</div>
+                <div class="gs_block">
+                <div class="gs_code">Промокод: </div>
+                <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/383998?erid=2SDnjcKZsEA" >Получить скидку</a></div>
+                </div>
+                <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "НОВЫЙ КНИЖНЫЙ ЦЕНТР" ИНН 7710422909, https://www.chitai-gorod.ru/. erid 2SDnjcKZsEA</div>
                 </div></div><script src="main.js"></script></body></html>
