--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <body>
             <div class="header-top">Поиск скидок в России</div>
             <div class="header"></div>
-        <div id="date">18 Октября 2024
+        <div id="date">19 Октября 2024
         </div>
         <div id="sort">
         </div>
@@ -19622,4 +19622,55 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/391369?erid=2SDnjeYQg9H" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО «Носимо» ИНН 7701349057, https://galaxystore.ru. erid 2SDnjeYQg9H</div>
+                </div><div id="number1154 " class="gs_kupon" >
+            <div class="gs_descr"><h2>Скидка 1000 рублей на программу welcome для новых клиентов по промокоду!</h2></div>
+                <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/104508/logos/regular.png" /></div>
+                <div class="gs_website">levelkitchen.com</div>
+                <div class="gs_category">Доставка еды</div>
+                <div class="gs_dates">
+                <b>
+                <div class="gs_start">18 Октября 2024 12:35:00</div><br>
+                <div class="gs_end">20 Октября 2024 12:35:00</div>
+                </b>
+                </div>
+                <div class="gs_type">скидка на заказ</div>
+                <div class="gs_block">
+                <div class="gs_code">Промокод: WELCOME1000</div>
+                <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/391378?kc=WELCOME1000&erid=2SDnje2syhM" >Получить скидку</a></div>
+                </div>
+                <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО ВЕРДЕ ИНН 7724456094, https://levelkitchen.com. erid 2SDnje2syhM</div>
+                </div><div id="number1155 " class="gs_kupon" >
+            <div class="gs_descr"><h2>Скидка 33% на Welcome-сет для новых клиентов по промокоду!</h2></div>
+                <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/104508/logos/regular.png" /></div>
+                <div class="gs_website">levelkitchen.com</div>
+                <div class="gs_category">Доставка еды</div>
+                <div class="gs_dates">
+                <b>
+                <div class="gs_start">18 Октября 2024 12:37:00</div><br>
+                <div class="gs_end">20 Октября 2024 12:37:00</div>
+                </b>
+                </div>
+                <div class="gs_type">скидка на заказ</div>
+                <div class="gs_block">
+                <div class="gs_code">Промокод: WELCOME33</div>
+                <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/391379?kc=WELCOME33&erid=2SDnjemscsM" >Получить скидку</a></div>
+                </div>
+                <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО ВЕРДЕ ИНН 7724456094, https://levelkitchen.com. erid 2SDnjemscsM</div>
+                </div><div id="number1156 " class="gs_kupon" >
+            <div class="gs_descr"><h2>Капсула Steel!</h2></div>
+                <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/103296/logos/regular.png" /></div>
+                <div class="gs_website">respect-shoes.ru</div>
+                <div class="gs_category">Скидки и акции</div>
+                <div class="gs_dates">
+                <b>
+                <div class="gs_start">18 Октября 2024 00:00:00</div><br>
+                <div class="gs_end">31 Октября 2024 23:59:00</div>
+                </b>
+                </div>
+                <div class="gs_type">скидка на заказ</div>
+                <div class="gs_block">
+                <div class="gs_code">Промокод: </div>
+                <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/391380?erid=2SDnjbwMLxb" >Получить скидку</a></div>
+                </div>
+                <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель РЕСПЕКТ-ОНЛАЙН ООО ИНН 7704815436, https://respect-shoes.ru/. erid 2SDnjbwMLxb</div>
                 </div></div><script src="main.js"></script></body></html>
