--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <body>
             <div class="header-top">Поиск скидок в России</div>
             <div class="header"></div>
-        <div id="date">19 Декабря 2024
+        <div id="date">20 Декабря 2024
         </div>
         <div id="sort">
         </div>
@@ -19124,7 +19124,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/396922?kc=HAPPY3&erid=2SDnjdYSru1" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "ЭД.ПАРТНЕРС" ИНН 7714482874, https://mbschool.ru/. erid 2SDnjdYSru1</div>
-                </div><div id="number1125 " class="gs_kupon" >
+                </div><div id="number1125 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>«Щелкунчик». Спектакль Академии Русского балета им. А. Я. Вагановой</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/94620/logos/regular.png" /></div>
                 <div class="gs_website">kassir.ru</div>
@@ -20144,7 +20144,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/397146?erid=2SDnjePC3aB" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО Эдил-Импорт ИНН 7733510051, https://www.holodilnik.ru/. erid 2SDnjePC3aB</div>
-                </div><div id="number1185 " class="gs_kupon" >
+                </div><div id="number1185 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Больше бонусов при покупке техники от топ-брендов</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/80533/logos/regular.png" /></div>
                 <div class="gs_website">holodilnik.ru</div>
@@ -22150,7 +22150,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/397374?erid=2SDnje2GpJ7" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель АО "ИЛЬ ДЕ БОТЭ" ИНН 7707061530, https://iledebeaute.ru/. erid 2SDnje2GpJ7</div>
-                </div><div id="number1303 " class="gs_kupon" >
+                </div><div id="number1303 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Запеченный ролл 3 сыра (8 шт) при заказе от 2499 рублей</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/108133/logos/regular.png" /></div>
                 <div class="gs_website">vipfish.ru</div>
@@ -22167,7 +22167,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/397379?kc=SLONINMSK&erid=2SDnjeiiL6X" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "КЕЙТЕРИНГ- РЕНТ" ИНН 7804597213, https://vipfish.ru. erid 2SDnjeiiL6X</div>
-                </div><div id="number1304 " class="gs_kupon" >
+                </div><div id="number1304 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Запеченный ролл с креветкой и горгонзоллой в подарок!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/108133/logos/regular.png" /></div>
                 <div class="gs_website">vipfish.ru</div>
