--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <body>
             <div class="header-top">Поиск скидок в России</div>
             <div class="header"></div>
-        <div id="date">7 Января 2025
+        <div id="date">8 Января 2025
         </div>
         <div id="sort">
         </div>
@@ -5813,7 +5813,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/396744?kc=gdeslonNY&erid=2SDnje5WZoq" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "СОТКА" ИНН 1660338214, https://sotkaonline.ru/. erid 2SDnje5WZoq</div>
-                </div><div id="number342 " class="gs_kupon" >
+                </div><div id="number342 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Выгодные комплекты Button Blue</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/102582/logos/regular.png" /></div>
                 <div class="gs_website">gulliver.ru</div>
@@ -5830,7 +5830,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/396746?erid=2SDnjek4acj" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО Гулливер Онлайн ИНН 7719780641, https://www.gulliver.ru/. erid 2SDnjek4acj</div>
-                </div><div id="number343 " class="gs_kupon" >
+                </div><div id="number343 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Подарочные сертификаты в новогоднем стиле</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/102582/logos/regular.png" /></div>
                 <div class="gs_website">gulliver.ru</div>
@@ -9672,7 +9672,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/398952?kc=%D0%9D%D0%9E%D0%92%D0%AB%D0%99%D0%93%D0%9E%D0%942025&erid=2SDnjbw7hfy" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО МИССШУЗ ИНН 7704431221, https://marioberlucci.ru/. erid 2SDnjbw7hfy</div>
-                </div><div id="number569 " class="gs_kupon" >
+                </div><div id="number569 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Премьера ёлки телеканала "КАРУСЕЛЬ"</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/94620/logos/regular.png" /></div>
                 <div class="gs_website">kassir.ru</div>
@@ -9689,7 +9689,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/398954?erid=2SDnjeYLSR9" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО «КАССИР.РУ – Национальный Билетный Оператор» ИНН 7841075409, https://kassir.ru/. erid 2SDnjeYLSR9</div>
-                </div><div id="number570 " class="gs_kupon" >
+                </div><div id="number570 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Ледовое шоу Татьяны Навки "Лебединое озеро"</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/94620/logos/regular.png" /></div>
                 <div class="gs_website">kassir.ru</div>
