--- a/poisk_tovarov/index.html
+++ b/poisk_tovarov/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <!-- jquery from google and mobile jquery -->
+    <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
