--- a/poisk_tovarov/index.html
+++ b/poisk_tovarov/index.html
@@ -34,7 +34,7 @@
 
 </div>
 <div>
-    <input id="input" type="text" onchange="moreload()"/>
+    <input id="input" type="text" onchange="searchXML()"/>
 </div>
 <button class="startbutton" onclick="searchXML()">нажмите для старта </button>
 
