--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <!-- Code -->
 <div class="input-box"  onchange="search_coupons()">
-      <input type="text" placeholder="Поиск акций..."/>
+      <input type="text" class="input_text_place" placeholder="Поиск акций..."/>
       <div class="check_promo">
       <input type="checkbox" id="promok" name="promok" value="promok">Только промокоды</input>
 
